--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "build": "tsc",
+    "start": "node dist/app.js"
   }
 }
