--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,3 @@
-POSTGRES_USER=""
-POSTGRES_PWD=""
-POSTGRES_DB=""
-JWT_SECRET=suaStringSecreta
+
+DATABASE_URL="postgres://postgres:@Sucesso10@localhost:5432/database_teste_tecnico"
 
