--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "dev": "ts-node-dev src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "test": "NODE_ENV=test jest",
-    "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "build": "tsc"
   }
 }
