--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 
 DATABASE_URL="postgres://postgres:@Sucesso10@localhost:5432/database_teste_tecnico"
 
+# POSTGRES_USER="postgres"
+# POSTGRES_PWD="@Sucesso10"
+# POSTGRES_DB="database_teste_tecnico"
+# JWT_SECRET=suaStringSecreta
