--- a/frontend/gerenciador-de-contatos/package.json
+++ b/frontend/gerenciador-de-contatos/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
+    "@react-ui-org/react-ui": "^0.45.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
